--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@xyflow/react": "^12.3.2",
     "axios": "^1.7.7",
     "path": "^0.12.7",
     "react": "^18.3.1",
